# epaper-tools

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
libs/IT8951/Config/: CMakeLists.txt
libs/IT8951/e-Paper/: CMakeLists.txt
